buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
	}
	dependencies {
		classpath group: 'org.mini2Dx', name: 'butler', version: '1.1.3'
	}
}

subprojects {

	apply plugin: 'java-library'

	sourceCompatibility = 17
	targetCompatibility = 17

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	java {
		modularity.inferModulePath = true
	}

	afterEvaluate {
		repositories {
			mavenCentral()
			maven {
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
					password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
				}
			}
		}
	}
}
